# rust-high-performance-monitoring-cookie-cutter

./: Cargo.toml  README.md
.cargo/: config.toml  dhat-heap.json
docs/: performance-monitoring.md
rust-hp-minitoring-cookie-cutter/: Cargo.toml
rust-hp-minitoring-cookie-cutter/benches/: benchmark.rs
rust-hp-minitoring-cookie-cutter/docs/: performance-monitoring.md
rust-hp-minitoring-cookie-cutter/tests/: unit_test.rs
scripts/: benchmark-binary.sh  benchmark-comparison.sh
